@@ -38,17 +38,35 @@
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.12.0</version>
                 <configuration>
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
                         <arg>--add-exports=jdk.jdeps/com.sun.tools.classfile=cfa</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.3</version>
+                <configuration>
+                  <argLine>--add-exports=jdk.jdeps/com.sun.tools.classfile=cfa</argLine>
+                  <workingDirectory>${project.build.directory}</workingDirectory>
                 </configuration>
             </plugin>
             <plugin>
